--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ricardo Tec. Chaveiro</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/modal.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/index.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/stylesDefault.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/responsives.css'>
@@ -15,7 +16,8 @@
 </head>
 
 <body>
-    <header>
+    <header class="bg-default-blue">
+
         <nav class=" navbar navbar-custom navbar-expand-lg  ">
             <div class="container">
                 <button class="navbar-toggler me-2" type="button" data-bs-toggle="offcanvas"
@@ -121,6 +123,7 @@
             </li>
 
         </ul>
+
     </header>
     <main>
         <section class="bg-default-blue container-fluid">
@@ -148,6 +151,7 @@
             </div>
             <br>
         </section>
+
         <div class="bar-current-footer"></div>
         <div class="line-bg-default-re w-100"></div>
         <div class="area-services">
@@ -341,14 +345,162 @@
         <div class="area-products">
             <div id="carroselProducts" class="container"> </div>
         </div>
+
+
+        <div class="area-services">
+            <br>
+            <h1 class="text-center text-default"><strong>Depoimentos dos nossos Clientes</strong></h1>
+            <br><br><br>
+            <div id="areaDepoiments" class="container ">
+
+            </div>
+            <br><br><br>
+        </div>
+
+
         <div class="bar-current-footer"></div>
         <div class="line-bg-default-re w-100"></div>
-        <div class="area-services"></div>
+
+        <div class="area-before-footer">
+            <br> <br> <br>
+            <div class="container area-form-banner-home text-default ">
+                <div class="area-left area-email-footer">
+                    <div class=" body-content-email">
+                        <div class="back-ground-email">
+                            <h3 class="text-center">Precisa de ajuda? <br>Escreva para a gente!</h3>
+                            <br>
+                            <form>
+                                <div class="d-flex justify-content-between">
+                                    <div class="mb-3 w-50">
+                                        <input type="email" class="form-control" id="exampleFormControlInput2"
+                                            placeholder="Seu nome">
+                                    </div>
+                                    <div style="visibility: hidden;">****</div>
+                                    <div class="mb-3 w-50">
+                                        <input type="email" class="form-control" id="exampleFormControlInput3"
+                                            placeholder="Whatsapp">
+                                    </div>
+                                </div>
+
+                                <div class="mb-3">
+                                    <input type="email" class="form-control" id="exampleFormControlInput4"
+                                        placeholder="Seu email">
+                                </div>
+                                <div class="mb-3">
+
+                                    <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"
+                                        style="resize: none;" placeholder="Deixe uma menssagem"></textarea>
+                                </div>
+                                <button
+                                    class="btn btn-lg w-100 bg-default text-default"><strong>Enviar</strong></button>
+                            </form>
+                            <br>
+                        </div>
+
+                    </div>
+                    <div class=" bg-default-blue footer-card"></div>
+
+                </div>
+
+                <div class=" bg-default-blue text-white area-left area-email-footer left-card">
+                    <div class=" body-content-email">
+                        <div class="back-ground-card">
+                            <h4 class="text-center">Serviços rápidos e confiáveis</h4>
+                            <br>
+                            <div>
+                                <div class="item-card-description">
+                                    <strong>Contato: </strong>
+                                    <div> (84) 98874-5331</div>
+                                </div>
+                                <div class="item-card-description">
+                                    <strong>Email: </strong>
+                                    <div> ricardo_michel97@hotmail.com</div>
+                                </div>
+                                <div class="item-card-description">
+                                    <strong>Website: </strong>
+                                    <div> www.ricardochaves.com.br</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="line-default-footer"></div>
+                        <div class="pointer area-social">
+                            <br>
+                            <h6 class="text-center">Acompanhe meu Trabalho</h6>
+                            <div class="area-social-footer">
+                                <div class="icon-footer  pointer"><i class="fa-brands fa-instagram"></i>
+                                </div>
+                                <div class="icon-footer pointer"><i class="fa-brands fa-facebook"></i></div>
+                            </div>
+                            <div class="text-center">@ricardochaveiro_</div>
+                            <br> <br>
+                        </div>
+                    </div>
+                    <div class=" bg-default footer-card"> </div>
+                </div>
+            </div>
+            <br><br><br>
+        </div>
+
     </main>
-
     <div class="line-bg-default-lg w-100"></div>
-    <footer class="bg-default-blue">
 
+    <footer class="bg-default-blue">
+        <div class=" container content-footer">
+            <br> <br>
+            <div class="container text-white">
+                <div class="navbar-brand logo" href="#">
+                    <img src="./imgs/logo.png" />
+                </div>
+                <br>
+                <div class="content-footer-text">
+                    <div class="text-institutional-less">
+                        <div>
+                            Com tradição familiar de três gerações, alio conhecimento ancestral a técnicas modernas,
+                            sempre
+                            com ética, sigilo e dedicação. Honro a confiança dos meus clientes com profissionalismo e
+                            compromisso com a segurança.
+                        </div>
+
+                        <div class="d-flex mt-2">
+                            <div class="icon-footer pointer"> <i class="fa-brands fa-whatsapp"></i></div>
+                            <div class="icon-footer  pointer"><i class="fa-brands fa-instagram"></i></div>
+                            <div class="icon-footer pointer"><i class="fa-brands fa-facebook"></i></div>
+                        </div>
+                    </div>
+                    <div class="options-navegation-mid">
+                        <div>
+                            <h6>Institucional</h6>
+                            <div class="links-footer">Home</div>
+                            <div class="links-footer">Serviços</div>
+                            <div class="links-footer">Sobre</div>
+                            <div class="links-footer">Contato</div>
+                        </div>
+                    </div>
+                    <div class="options-navegation">
+                        <div>
+                            <h6 class="title">Deixe seu email</h6>
+                            <div>Deixe seu e-mail e receba novidades exclusivas direto na sua caixa de entrada.</div>
+
+                            <div class="mt-2 d-flex">
+                                <input type="email" placeholder="Seu Email" class="form-control" />
+                                <button style="border: none;" class=" text-white icon-footer "><i
+                                        class="fa-solid fa-paper-plane"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+        <div class=" text-center container-fluid copyright">
+            <div class="container">
+                <div class="line-default-home"></div>
+                <br>
+                <p>Politicas de Privacidade</p>
+                <p>© 2025 Ricardo Chaveiro. Todos os direitos reservados.</p>
+            </div>
+        </div>
     </footer>
 
     <div class="area-btn-whatsapp flex-position-center">
@@ -358,24 +510,42 @@
         </div>
     </div>
 
-    <div class="modal  fade" id="staticBackdrop" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal modal-xl fade" id="staticBackdrop" data-bs-keyboard="true" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <div class="area-cabecalho">
+                        <div class="content-01">
+                            <div class="area-thumbnail"> </div>
+                            <div class="area-foto"></div>
+                        </div>
+                        <div class="content-02">
+                            <h3 id="titleModal"></h3>
+                            <div class="modal-ficha-tecnica"></div>
+                            <br>
+                            <button class="btn btn-lg bg-default text-default">
+                                <strong>Quero Instalar agora</strong>
+                            </button>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="modal-description"></div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Understood</button>
                 </div>
             </div>
         </div>
     </div>
+
+
+
+
+
 </body>
 
 
@@ -388,6 +558,7 @@
 <script src="https://kit.fontawesome.com/c96a68a8c9.js" crossorigin="anonymous"></script>
 <script src='./js/main.js'></script>
 <script src='./js/products.js'></script>
+<script src='./js/depoiments.js'></script>
 <script>
     document.querySelectorAll('.nav-link').forEach(link => {
         link.addEventListener('click', function () {
