--- a/garbage/garbage.html
+++ b/garbage/garbage.html
@@ -23,3 +23,40 @@
     <br>
     <div class="line line-default"></div>
 </div>
+
+
+
+<video width="640" height="360" autoplay muted loop>
+    <source src="./imgs/as.mp4" type="video/mp4" />
+</video>
+
+
+<video autoplay muted loop playsinline class="video-bg">
+    <source src="./videos/01_v.mp4" type="video/mp4">
+    Seu navegador não suporta vídeos em HTML5.
+</video>
+
+
+header {
+position: relative;
+overflow: hidden;
+width: 100%;
+height: 1000px;
+
+}
+
+.video-bg {
+opacity: .3;
+position: absolute;
+top: 0;
+left: 0;
+height: 100%;
+width: 100%;
+object-fit: cover;
+z-index: 1;
+}
+
+.sup{
+position: relative;
+z-index: 10;
+}
